fix hero & heading spacing

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: $grid * 2 $grid * 4.5;
+        padding: $grid * 2 $grid * 4.5 0;
     }
 }
 
