--- a/components/LandingPage/Hero/Hero.module.scss
+++ b/components/LandingPage/Hero/Hero.module.scss
@@ -121,3 +121,7 @@
         }
     }
 }
+
+.svg {
+    @include hidden();
+}
